WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
227024
ANGLE Metal gl sync objects do not work in case of listener being needed
https://bugs.webkit.org/show_bug.cgi?id=227024
Summary
ANGLE Metal gl sync objects do not work in case of listener being needed
Kimmo Kinnunen
Reported
2021-06-15 06:37:31 PDT
ANGLE Metal gl sync objects do not work in case of listener being needed The MTLSharedEventListener is nil due to sandbox.
Attachments
Patch
(3.62 KB, patch)
2021-06-16 01:29 PDT
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Patch
(3.62 KB, patch)
2021-06-16 01:29 PDT
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2021-06-16 01:29:00 PDT
Created
attachment 431525
[details]
Patch
Kimmo Kinnunen
Comment 2
2021-06-16 01:29:54 PDT
Created
attachment 431526
[details]
Patch
EWS Watchlist
Comment 3
2021-06-16 01:30:11 PDT
Note that there are important steps to take when updating ANGLE. See
https://trac.webkit.org/wiki/UpdatingANGLE
Radar WebKit Bug Importer
Comment 4
2021-06-16 02:13:01 PDT
<
rdar://problem/79387276
>
Per Arne Vollan
Comment 5
2021-06-16 02:20:51 PDT
Comment on
attachment 431526
[details]
Patch R=me.
EWS
Comment 6
2021-06-16 04:52:11 PDT
Committed
r278929
(
238860@main
): <
https://commits.webkit.org/238860@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 431526
[details]
.
Kenneth Russell
Comment 7
2021-06-16 10:53:31 PDT
Nice fix Kimmo! Deep magic.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug