ANGLE Metal gl sync objects do not work in case of listener being needed https://bugs.webkit.org/show_bug.cgi?id=227024

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2021-06-16
Reviewed by Per Arne Vollan.

Source/ThirdParty/ANGLE:

Add an assert to notice when MTLSharedEventListener instantiation
fails. Without this, the fence implementation would not signal
the completion until the timeout would pass.

* src/libANGLE/renderer/metal/DisplayMtl.mm:
(rx::DisplayMtl::getOrCreateSharedEventListener):

Source/WebKit:

Make MTLSharedEventListener instantiatable by adding IOKit messages
39 and 40 to IOSurfaceRootUserClientMessageFilter.

The MTLSharedEventListener init would fail, and ANGLE would fail to
make the shared event signal the event listener. This would cause
all glClientWaitSync calls to wait the full timeout time.

No new tests, WebGL2 sync object implementation does not support
non-zero timeout values that would be needed to detect the failure.
Standalone test-cases would need the test runner being sandboxed,
which is not implemented currently.

* WebProcess/com.apple.WebProcess.sb.in:

Canonical link: https://commits.webkit.org/238860@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278929 268f45cc-cd09-0410-ab3c-d52691b4dbfc